--- a/part2/test/src/index.css
+++ b/part2/test/src/index.css
@@ -1,14 +1,15 @@
-.success {
+h1 {
   color: green;
-  background: lightgrey;
-  font-size: 20px;
-  border-style: solid;
-  border-radius: 5px;
-  padding: 10px;
-  margin-bottom: 10px;
+  font-style: italic;
 }
 
-.fail {
+.note {
+  color: grey;
+  padding-top: 3px;
+  font-size: 15px;
+}
+
+.error {
   color: red;
   background: lightgrey;
   font-size: 20px;
